# skin-smoothing

./: .gitignore  CMakeLists.txt  README.md  facialskinsmoother.cpp  facialskinsmoother.h  imagefilter.cpp  imagefilter.h  main.cpp  skinsmoother.cpp  skinsmoother.h
